# audio-limiter-tauri

./: .cursorrules  .gitignore  README.md  index.html  package.json  tailwind.config.ts  testrun.sh  tsconfig.json  vite.config.ts
.github/: renovate.json
.github/workflows/: publish.yml  test.yml  update-node-dependencies.yml  update-rust-packages.yml
docs/: README_en.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  compressor.rs  lib.rs  main.rs  streaming.rs
